@@ -3,8 +3,9 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
-- added methods to DirectoryTool to allow cross editing of String List Fields 
-  (kind of simple directory joins)
+- added private methods to DirectoryTool to allow cross editing of String List Fields 
+  (kind of simple directory joins). Access rights to directories should be check
+  by the calling environment
 Bug fixes:
 ~~~~~~~~~~
 - Security fix: better restrict access to the getEntry method. ACLs are checked.
